--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -195,7 +195,7 @@ th, td
     .sidebar
       right 0  // leftをrightに変更
       left initial
-      border-right 1px solid $borderColor // 追加
+      border-left 1px solid $borderColor // 追加
 
     .page
       padding-right $sidebarWidth // leftをrightに変更
