--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -18,7 +18,7 @@ body
   color $textColor
 
 .page
-  padding-right $sidebarWidth
+  // padding-right $sidebarWidth
 
 .navbar
   position fixed
@@ -199,3 +199,4 @@ th, td
       padding-left 0
 
 @require 'mobile.styl'
+@require 'my-custom.styl'
